--- a/index.html
+++ b/index.html
@@ -17,14 +17,17 @@
         <nav class="navbar navbar-light bg-light mx-auto  pt-5">
             <div class="container-fluid d-flex mx-auto">
                 <a class="navbar-brand d-flex mx-auto fw-bold fs-1 text-success">Phone Finder</a>
-                <form class="d-flex mx-auto">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
+                <div class="d-flex mx-auto">
+                    <input id="search-field" autocomplete="off" class="form-control me-2" type="search"
+                        placeholder="Search" aria-label="Search">
+                    <button onclick="searchPhone()" id="button-search" type="button"
+                        class="btn btn-outline-success">Search</button>
+                </div>
             </div>
         </nav>
     </header>
 
+    <script src="phoneFinder.js"></script>
     <!--Bootstrap JavaScript addded here-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
