--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
-<body>
+<body class="bg-gray">
     <header>
         <nav class="navbar navbar-light bg-light mx-auto  pt-5">
             <div class="container-fluid d-flex mx-auto">
@@ -26,9 +26,15 @@
             </div>
         </nav>
     </header>
-    <section>
+    <section class="pt-3">
+
+        <div id="phone-details" class=" h-50 w-50 mb-5 mt-5 mx-auto">
+
+        </div>
         <!--Phone search result-->
         <div id="search-result" class="row row-cols-1 row-cols-md-3 g-4">
+
+
 
         </div>
     </section>
