--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 </head>
 
 <body class="bg-gray">
+    
+    <!--search section start here-->
     <header>
         <nav class="navbar navbar-light bg-light mx-auto  pt-5">
             <div class="container-fluid d-flex mx-auto">
